tests/e2e/failing/declaration/scope.unt
thread_def Main {
  int x = 0;
  string x = "hello";
}